架构重构：WbiTest 重命名为 WbiSigner、WbiKeyManager 修复 O(n²) 字符串拼接并预编译正则
Co-authored-by: mangOdried <mangOdried@users.noreply.github.com>